--- a/index.html
+++ b/index.html
@@ -227,9 +227,7 @@
 				<p>
 					In alternativa, se preferisci, puoi inviare una richiesta
 					via email a
-					<a href="mailto:gestyfi25@gmail.com"
-						>support@tuodominio.it</a
-					>
+					<a href="mailto:gestyfi25@gmail.com">gestyfi25@gmail.com</a>
 					indicando chiaramente l’indirizzo email collegato
 					all’account da eliminare.
 				</p>
@@ -251,7 +249,7 @@
 
 		<!-- Footer -->
 		<footer>
-			<p>© 2023 <strong>Nome App</strong> - Tutti i diritti riservati</p>
+			<p>© 2025 <strong>GestyFi</strong> - Tutti i diritti riservati</p>
 		</footer>
 	</body>
 </html>
